small update to docker compose

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,6 +8,8 @@ server {
 
 	location / {
 		proxy_pass http://django;
+		proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
 	}
 
 	location /static/ {
