--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 version: '3.7'
 
 services:
-
-
   db:
     image: postgres
     environment:
@@ -13,7 +11,7 @@ services:
       - .postgres_data:/var/lib/postgresql/data/
     ports:
       - "5435:5432"
-
+      
   server:
     container_name: nido_server
     volumes:
@@ -23,16 +21,15 @@ services:
       - .env
     build: ./server
     ports:
-      - "8000:8000"
+      - "8001:8000"
     depends_on:
       - db
-    
-    
+
 
   nginx:
     build: ./nginx
     volumes:
-      - static:/static
+      - static:/app/static
     ports:
       - "80:80"
     depends_on:
