--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
   nginx:
     build: ./nginx
     volumes:
-      - static:/app/static
+      - ./server/static:/static
     ports:
       - "80:80"
     depends_on:
@@ -37,4 +37,3 @@ services:
 
 volumes:
   postgres_data:
-  static:
