Basic implemetation of stripe element and functioning - done

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,7 +13,10 @@ server {
 	}
 
 	location /static/ {
-		alias /static/;
+		alias /path/to/static/files/;
+		expires -1;
+		add_header Cache-Control "no-cache";
+		
 	}
 add_header 'Access-Control-Allow-Origin' '*';
 add_header 'Access-Control-Allow-Credentials' 'true';
