Error con default.conf resuelto

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,7 +13,7 @@ server {
 	}
 
 	location /static/ {
-		alias /path/to/static/files/;
+		alias /static/;
 		expires -1;
 		add_header Cache-Control "no-cache";
 		
